try fix flip alignement

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ button {
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.8s ease;
     transform-style: preserve-3d;
     transform-origin: center; /* Ensure the flip happens around the center */
     cursor: grab;
